--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
+    "firebase": "^7.21.0",
     "history": "^5.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
